Added breadcrumbs & pagination pages

--- a/urbanstory/src/css/sass/composer/style.scss
+++ b/urbanstory/src/css/sass/composer/style.scss
@@ -16,3 +16,5 @@
 @import "../components/_checkbox-radio";
 @import "../components/labels";
 @import "../components/list";
+@import "../components/breadcrumbs";
+@import "../components/pagination";
