--- a/urbanstory/src/css/style.css
+++ b/urbanstory/src/css/style.css
@@ -2002,6 +2002,16 @@ select {
   border-radius: 4px;
   transition: 0.5s;
 }
+.list .active {
+  border: 1px solid rgba(39, 145, 217, 0.1);
+  border-radius: 4px;
+  background-color: rgba(39, 145, 217, 0.1);
+}
+.list .active .check-box-icon .icon {
+  width: 14px;
+  height: 14px;
+  content: url(../../src/img/list/check.svg);
+}
 
 .check-box .list-item {
   padding: 0 0;
@@ -2018,15 +2028,109 @@ select {
   color: #757575;
 }
 
-.active {
-  border: 1px solid rgba(39, 145, 217, 0.1);
-  border-radius: 4px;
-  background-color: rgba(39, 145, 217, 0.1);
+.breadcrumb {
+  display: flex;
+  list-style-type: none;
+  padding-inline-start: 0;
 }
-.active .check-box-icon .icon {
-  width: 14px;
-  height: 14px;
-  content: url(../../src/img/list/check.svg);
+.breadcrumb .breadcrumb-item {
+  height: 18px;
+  color: #33BEEF;
+  font-size: 14px;
+  line-height: 18px;
+}
+.breadcrumb .breadcrumb-item:not(:last-child) a {
+  margin-right: 4px;
+}
+.breadcrumb .breadcrumb-item:not(:first-child) a {
+  margin-left: 4px;
+}
+.breadcrumb .breadcrumb-item > a:hover {
+  color: #A3A3A3;
+  transition: 0.5s;
+}
+.breadcrumb .breadcrumb-item:not(:last-child):after {
+  color: #C2C2C2;
+  content: ">";
+}
+.breadcrumb .active {
+  border: none;
+  border-radius: 0;
+  background-color: transparent;
+}
+.breadcrumb .active a {
+  color: #A3A3A3;
+}
+
+.sub-section-pagination {
+  margin-bottom: 23px;
+}
+.sub-section-pagination h5 {
+  height: 22px;
+  color: #1A1A1A;
+  font-size: 18px;
+  line-height: 22px;
+}
+.sub-section-pagination:last-of-type {
+  margin-bottom: 81px;
+}
+
+.pagination {
+  height: 40px;
+  width: 280px;
+  border: 1px solid rgba(221, 221, 221, 0.1);
+  border-radius: 2px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+}
+.pagination .list-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
+  padding-inline-start: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+.pagination .list-page .page-number {
+  transition: 0.5s;
+}
+.pagination .list-page .page-number a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  font-size: 14px;
+  color: #A3A3A3;
+}
+.pagination .list-page .page-number a:hover {
+  border-radius: 4px;
+  background-color: #000C35;
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
+  transition: 0.5s;
+  color: white;
+}
+.pagination .list-page .page-number a:active {
+  background-color: #000823;
+  box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1);
+}
+.pagination .list-page .active-page a {
+  border-radius: 4px;
+  background-color: #011148;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1);
+  color: white;
+}
+.pagination .list-page .hovered-page-number a {
+  border-radius: 4px;
+  background-color: #000C35;
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
+  color: white;
+}
+.pagination .list-page .focused-page-number a {
+  border-radius: 4px;
+  color: white;
+  background-color: #000823;
+  box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1);
 }
 
 /*# sourceMappingURL=style.css.map */
