Optimized styling for pagination, breadcrumbs & labels

--- a/urbanstory/pages/components/breadcrumbs.html
+++ b/urbanstory/pages/components/breadcrumbs.html
@@ -3,19 +3,15 @@
         <h1>Breadcrumbs</h1>
     </section>
     <section>
-        <nav>
-            <ul class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                <li class="breadcrumb-item"><a href="#">Page</a></li>
-                <li class="breadcrumb-item active"><a href="#">Sub Page</a></li>
-            </ul>
+        <nav class="breadcrumb">
+            <a href="#">Home</a>
+            <a href="#">Page</a>
+            <a href="#" class="active">Sub Page</a>
         </nav>
-        <pre><code>&lt;nav&gt;
-    &lt;ul class=&quot;breadcrumb&quot;&gt;
-        &lt;li class=&quot;breadcrumb-item&quot;&gt;&lt;a href=&quot;#&quot;&gt;Home&lt;/a&gt;&lt;/li&gt;
-        &lt;li class=&quot;breadcrumb-item&quot;&gt;&lt;a href=&quot;#&quot;&gt;Page&lt;/a&gt;&lt;/li&gt;
-        &lt;li class=&quot;breadcrumb-item active&quot;&gt;&lt;a href=&quot;#&quot;&gt;Sub Page&lt;/a&gt;&lt;/li&gt;
-    &lt;/ul&gt;
+        <pre><code>&lt;nav class=&quot;breadcrumb&quot;&gt;
+    &lt;a href=&quot;#&quot;&gt;Home&lt;/a&gt;
+    &lt;a href=&quot;#&quot;&gt;Page&lt;/a&gt;
+    &lt;a href=&quot;#&quot; class=&quot;active&quot;&gt;Sub Page&lt;/a&gt;
 &lt;/nav&gt;</code></pre>
     </section>
 </div>
