--- a/urbanstory/pages/components/labels.html
+++ b/urbanstory/pages/components/labels.html
@@ -4,33 +4,20 @@
     </section>
     <section>
         <div class="labels-group">
-            <div class="labels">
-                <p>Badge outlines</p>
-            </div>
-            <div class="labels flat-grey">
-                <p>Badge flat grey</p>
-            </div>
-            <div class="labels primary">
-                <p>Badge prime</p>
-            </div>
-            <div class="labels success">
-                <p>Badge success</p>
-            </div>
+            <div class="label">Badge outlines</div>
+            <div class="label label-grey">Badge flat grey</div>
+            <div class="label label-firm">Badge prime</div>
+            <div class="label label-success">Badge success</div>
+            <div class="label label-danger">Badge danger</div>
+            <div class="label label-warning">Badge warning</div>
+            <div class="label label-median">Badge median</div>
         </div>
-        <pre><code>&lt;div class=&quot;labels&quot;&gt;
-    &lt;p&gt;Badge outlines&lt;/p&gt;
-&lt;/div&gt;
-
-&lt;div class=&quot;labels flat-grey&quot;&gt;
-    &lt;p&gt;Badge flat grey&lt;/p&gt;
-&lt;/div&gt;
-
-&lt;div class=&quot;labels primary&quot;&gt;
-    &lt;p&gt;Badge prime&lt;/p&gt;
-&lt;/div&gt;
-
-&lt;div class=&quot;labels success&quot;&gt;
-    &lt;p&gt;Badge success&lt;/p&gt;
-&lt;/div&gt;</code></pre>
+        <pre><code>&lt;div class=&quot;label&quot;&gt;Badge outlines&lt;/div&gt;
+&lt;div class=&quot;label label-grey&quot;&gt;Badge flat grey&lt;/div&gt;
+&lt;div class=&quot;label label-firm&quot;&gt;Badge prime&lt;/div&gt;
+&lt;div class=&quot;label label-success&quot;&gt;Badge success&lt;/div&gt;
+&lt;div class=&quot;label label-danger&quot;&gt;Badge danger&lt;/div&gt;
+&lt;div class=&quot;label label-warning&quot;&gt;Badge warning&lt;/div&gt;
+&lt;div class=&quot;label label-median&quot;&gt;Badgemedian&lt;/div&gt;</code></pre>
     </section>
 </div>
