--- a/urbanstory/pages/components/pagination.html
+++ b/urbanstory/pages/components/pagination.html
@@ -6,55 +6,47 @@
         <div class="sub-section-pagination">
             <h5>Default</h5>
             <nav class="pagination">
-                <ul class="list-page">
-                    <li class="page-number"><a href="#">&lt</a></li>
-                    <li class="page-number"><a href="#">1</a></li>
-                    <li class="page-number active-page"><a href="#">2</a></li>
-                    <li class="page-number"><a href="#">3</a></li>
-                    <li class="page-number"><a href="#">4</a></li>
-                    <li class="page-number"><a href="#">5</a></li>
-                    <li class="page-number"><a href="#">&gt</a></li>
-                </ul>
+                <a href="#">&lt</a>
+                <a href="#">1</a>
+                <a href="#" class="active">2</a>
+                <a href="#">3</a>
+                <a href="#">4</a>
+                <a href="#">5</a>
+                <a href="#">&gt</a>
             </nav>
         </div>
         <div class="sub-section-pagination">
             <h5>Hovered</h5>
             <nav class="pagination">
-                <ul class="list-page">
-                    <li class="page-number"><a href="#">&lt</a></li>
-                    <li class="page-number"><a href="#">1</a></li>
-                    <li class="page-number hovered-page-number"><a href="#">2</a></li>
-                    <li class="page-number"><a href="#">3</a></li>
-                    <li class="page-number"><a href="#">4</a></li>
-                    <li class="page-number"><a href="#">5</a></li>
-                    <li class="page-number"><a href="#">&gt</a></li>
-                </ul>
+                <a href="#">&lt</a>
+                <a href="#">1</a>
+                <a href="#" class="hovered">2</a>
+                <a href="#">3</a>
+                <a href="#">4</a>
+                <a href="#">5</a>
+                <a href="#">&gt</a>
             </nav>
         </div>
         <div class="sub-section-pagination">
             <h5>Focus / clicked</h5>
             <nav class="pagination">
-                <ul class="list-page">
-                    <li class="page-number"><a href="#">&lt</a></li>
-                    <li class="page-number"><a href="#">1</a></li>
-                    <li class="page-number focused-page-number"><a href="#">2</a></li>
-                    <li class="page-number"><a href="#">3</a></li>
-                    <li class="page-number"><a href="#">4</a></li>
-                    <li class="page-number"><a href="#">5</a></li>
-                    <li class="page-number"><a href="#">&gt</a></li>
-                </ul>
+                <a href="#">&lt</a>
+                <a href="#">1</a>
+                <a href="#" class="focused">2</a>
+                <a href="#">3</a>
+                <a href="#">4</a>
+                <a href="#">5</a>
+                <a href="#">&gt</a>
             </nav>
         </div>
         <pre><code>&lt;nav class=&quot;pagination&quot;&gt;
-    &lt;ul class=&quot;list-page&quot;&gt;
-        &lt;li class=&quot;page-number&quot;&gt;&lt;a href=&quot;#&quot;&gt;&amp;lt&lt;/a&gt;&lt;/li&gt;
-        &lt;li class=&quot;page-number&quot;&gt;&lt;a href=&quot;#&quot;&gt;1&lt;/a&gt;&lt;/li&gt;
-        &lt;li class=&quot;page-number active-page&quot;&gt;&lt;a href=&quot;#&quot;&gt;2&lt;/a&gt;&lt;/li&gt;
-        &lt;li class=&quot;page-number&quot;&gt;&lt;a href=&quot;#&quot;&gt;3&lt;/a&gt;&lt;/li&gt;
-        &lt;li class=&quot;page-number&quot;&gt;&lt;a href=&quot;#&quot;&gt;4&lt;/a&gt;&lt;/li&gt;
-        &lt;li class=&quot;page-number&quot;&gt;&lt;a href=&quot;#&quot;&gt;5&lt;/a&gt;&lt;/li&gt;
-        &lt;li class=&quot;page-number&quot;&gt;&lt;a href=&quot;#&quot;&gt;&amp;gt&lt;/a&gt;&lt;/li&gt;
-    &lt;/ul&gt;
+    &lt;a href=&quot;#&quot;&gt;&amp;lt&lt;/a&gt;
+    &lt;a href=&quot;#&quot;&gt;1&lt;/a&gt;
+    &lt;a href=&quot;#&quot; class=&quot;active&quot;&gt;2&lt;/a&gt;
+    &lt;a href=&quot;#&quot;&gt;3&lt;/a&gt;
+    &lt;a href=&quot;#&quot;&gt;4&lt;/a&gt;
+    &lt;a href=&quot;#&quot;&gt;5&lt;/a&gt;
+    &lt;a href=&quot;#&quot;&gt;&amp;gt&lt;/a&gt;
 &lt;/nav&gt;</code></pre>
     </section>
 </div>
