--- a/urbanstory/src/css/sass/components/_pagination.scss
+++ b/urbanstory/src/css/sass/components/_pagination.scss
@@ -1,3 +1,7 @@
+/* Pagination */
+$pagination-height: 40px;
+$radius: 4px;
+
 .sub-section-pagination {
     margin-bottom: 23px;
 
@@ -14,73 +18,54 @@
 }
 
 .pagination {
-    height: 40px;
-    width: 280px;
+    display: inline-block;
+    height: $pagination-height;
+    min-width: $pagination-height * 3;
     border: 1px solid rgba(221, 221, 221, 0.1);
-    border-radius: 2px;
+    border-radius: $radius / 2;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
 
-    .list-page {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        list-style-type: none;
-        padding-inline-start: 0;
-        margin-block-start: 0;
-        margin-block-end: 0;
+    a {
+        display: inline-block;
+        border-radius: $radius;
+        width: $pagination-height;
+        height: $pagination-height;
+        text-align: center;
+        line-height: $pagination-height;
+        font-size: 14px;
+        color: $c-grey-4;
+        @extend .transition;
 
-        .page-number {
-            transition: 0.5s;
-
-            a {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                width: 40px;
-                height: 40px;
-                font-size: 14px;
-                color: $c-grey-4;
-
-                &:hover {
-                    border-radius: 4px;
-                    background-color: #000C35;
-                    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
-                    transition: 0.5s;
-                    color: white;
-                }
-
-                &:active {
-                    background-color: #000823;
-                    box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1);
-                }
-            }
+        &:hover {
+            background-color: #000C35;
+            box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
+            color: white;
+            @extend .transition;
         }
 
-        .active-page {
-            a {
-                border-radius: 4px;
-                background-color: $c-firm-1;
-                box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1);
-                color: white;
-            }
+        &:focus {
+            background-color: #000823;
+            box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1);
+            color: white;
+            @extend .transition;
         }
 
-        .hovered-page-number {
-            a {
-                border-radius: 4px;
-                background-color: #000C35;
-                box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
-                color: white;
-            }
+        &.active {
+            background-color: $c-firm-1;
+            box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1);
+            color: white;
         }
 
-        .focused-page-number {
-            a {
-                border-radius: 4px;
-                color: white;
-                background-color: #000823;
-                box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1);
-            }
+        &.hovered {
+            background-color: #000C35;
+            box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
+            color: white;
+        }
+
+        &.focused {
+            color: white;
+            background-color: #000823;
+            box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1);
         }
     }
 }
