--- a/urbanstory/src/css/style.css
+++ b/urbanstory/src/css/style.css
@@ -167,7 +167,7 @@ figcaption {
   font-style: italic;
 }
 
-.transition, .uh-tab-nav .nav-item::before, .avatar, textarea,
+.transition, .pagination a:focus, .pagination a:hover, .pagination a, .breadcrumb a:hover, .breadcrumb a, .uh-tab-nav .nav-item::before, .avatar, textarea,
 input[type=text],
 input[type=password],
 input[type=email],
@@ -1922,53 +1922,47 @@ select {
 }
 
 /* Labels */
-.labels-group {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 40%;
-}
-
-.labels {
-  height: 20px;
-  width: 84px;
+.label {
   border: 1px solid #C2C2C2;
   border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.labels p {
   color: #757575;
-  font-family: "Barlow", Arial, sans-serif;
+  display: inline-block;
   font-size: 11px;
-  line-height: 11px;
+  height: 20px;
+  line-height: 18px;
+  min-width: 40px;
+  margin-left: 4px;
+  padding: 0 8px;
   text-align: center;
-  margin-block-start: 0;
-  margin-block-end: 0;
 }
-
-.flat-grey {
-  border: 1px solid #D6D6D6;
-  background-color: #D6D6D6;
-}
-.flat-grey p {
-  color: #757575;
-}
-
-.primary {
-  border: 1px solid #011148;
+.label.label-firm {
   background-color: #011148;
-}
-.primary p {
+  border: 1px solid #011148;
   color: white;
 }
-
-.success {
-  border: 1px solid #2FBD90;
+.label.label-success {
   background-color: #2FBD90;
+  border: 1px solid #2FBD90;
+  color: white;
 }
-.success p {
+.label.label-grey {
+  background-color: #D6D6D6;
+  border: 1px solid #D6D6D6;
+  color: #757575;
+}
+.label.label-danger {
+  background-color: #EF4344;
+  border: 1px solid #EF4344;
+  color: white;
+}
+.label.label-warning {
+  background-color: #FFCE07;
+  border: 1px solid #FFCE07;
+  color: white;
+}
+.label.label-median {
+  background-color: #2791D9;
+  border: 1px solid #2791D9;
   color: white;
 }
 
@@ -2028,40 +2022,33 @@ select {
   color: #757575;
 }
 
+/* Breadcrumbs */
 .breadcrumb {
   display: flex;
-  list-style-type: none;
-  padding-inline-start: 0;
 }
-.breadcrumb .breadcrumb-item {
+.breadcrumb a {
   height: 18px;
   color: #33BEEF;
   font-size: 14px;
   line-height: 18px;
 }
-.breadcrumb .breadcrumb-item:not(:last-child) a {
-  margin-right: 4px;
-}
-.breadcrumb .breadcrumb-item:not(:first-child) a {
-  margin-left: 4px;
-}
-.breadcrumb .breadcrumb-item > a:hover {
+.breadcrumb a:hover {
   color: #A3A3A3;
-  transition: 0.5s;
 }
-.breadcrumb .breadcrumb-item:not(:last-child):after {
+.breadcrumb a:not(:last-child):after {
   color: #C2C2C2;
   content: ">";
+  display: inline-block;
+  margin: 0 4px;
 }
 .breadcrumb .active {
   border: none;
   border-radius: 0;
   background-color: transparent;
-}
-.breadcrumb .active a {
   color: #A3A3A3;
 }
 
+/* Pagination */
 .sub-section-pagination {
   margin-bottom: 23px;
 }
@@ -2076,58 +2063,44 @@ select {
 }
 
 .pagination {
+  display: inline-block;
   height: 40px;
-  width: 280px;
+  min-width: 120px;
   border: 1px solid rgba(221, 221, 221, 0.1);
   border-radius: 2px;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
 }
-.pagination .list-page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  list-style-type: none;
-  padding-inline-start: 0;
-  margin-block-start: 0;
-  margin-block-end: 0;
-}
-.pagination .list-page .page-number {
-  transition: 0.5s;
-}
-.pagination .list-page .page-number a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.pagination a {
+  display: inline-block;
+  border-radius: 4px;
   width: 40px;
   height: 40px;
+  text-align: center;
+  line-height: 40px;
   font-size: 14px;
   color: #A3A3A3;
 }
-.pagination .list-page .page-number a:hover {
-  border-radius: 4px;
+.pagination a:hover {
   background-color: #000C35;
   box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
-  transition: 0.5s;
   color: white;
 }
-.pagination .list-page .page-number a:active {
+.pagination a:focus {
   background-color: #000823;
   box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1);
+  color: white;
 }
-.pagination .list-page .active-page a {
-  border-radius: 4px;
+.pagination a.active {
   background-color: #011148;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1);
   color: white;
 }
-.pagination .list-page .hovered-page-number a {
-  border-radius: 4px;
+.pagination a.hovered {
   background-color: #000C35;
   box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
   color: white;
 }
-.pagination .list-page .focused-page-number a {
-  border-radius: 4px;
+.pagination a.focused {
   color: white;
   background-color: #000823;
   box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1);
