Improved styling for list components & fixed code styling

--- a/urbanstory/pages/components/list.html
+++ b/urbanstory/pages/components/list.html
@@ -7,21 +7,15 @@
             <h3 class="sub-title">Checkbox</h3>
             <ul class="list check-box">
                 <li class="list-item">
-                    <div class="check-box-icon">
-                        <div class="icon"></div>
-                    </div>
+                    <i class="check-box-icon"></i>
                     <p>List item checkbox</p>
                 </li>
                 <li class="list-item">
-                    <div class="check-box-icon">
-                        <div class="icon"></div>
-                    </div>
+                    <i class="check-box-icon"></i>
                     <p>List item checkbox</p>
                 </li>
                 <li class="list-item active">
-                    <div class="check-box-icon">
-                        <div class="icon"></div>
-                    </div>
+                    <i class="check-box-icon"></i>
                     <p>List item checkbox</p>
                 </li>
             </ul>
@@ -40,16 +34,15 @@
         </div>
         <pre><code>&lt;ul class=&quot;list check-box&quot;&gt;
     &lt;li class=&quot;list-item&quot;&gt;
-        &lt;div class=&quot;check-box-icon&quot;&gt;
-            &lt;div class=&quot;icon&quot;&gt;&lt;/div&gt;
-        &lt;/div&gt;
+        &lt;i class=&quot;check-box-icon&quot;&gt;&lt;/i&gt;
         &lt;p&gt;List item checkbox&lt;/p&gt;
     &lt;/li&gt;
-
+    &lt;li class=&quot;list-item&quot;&gt;
+        &lt;i class=&quot;check-box-icon&quot;&gt;&lt;/i&gt;
+        &lt;p&gt;List item checkbox&lt;/p&gt;
+    &lt;/li&gt;
     &lt;li class=&quot;list-item active&quot;&gt;
-        &lt;div class=&quot;check-box-icon&quot;&gt;
-            &lt;div class=&quot;icon&quot;&gt;&lt;/div&gt;
-        &lt;/div&gt;
+        &lt;i class=&quot;check-box-icon&quot;&gt;&lt;/i&gt;
         &lt;p&gt;List item checkbox&lt;/p&gt;
     &lt;/li&gt;
 &lt;/ul&gt;
