--- a/urbanstory/src/css/index.css
+++ b/urbanstory/src/css/index.css
@@ -7,7 +7,7 @@
 }
 
 .border-bottom {
-  border-bottom: solid 1px #D6D6D6;
+  border-bottom: solid 1px #d6d6d6;
 }
 
 .text-giant {
@@ -37,7 +37,7 @@
   background: #000516;
 }
 .color-box.median-1 {
-  background: #2791D9;
+  background: #2791d9;
 }
 .color-box.median-2 {
   background: #2283c4;
@@ -46,7 +46,7 @@
   background: #1f74ae;
 }
 .color-box.prime-1 {
-  background: #33BEEF;
+  background: #33beef;
 }
 .color-box.prime-2 {
   background: #1bb6ed;
@@ -55,7 +55,7 @@
   background: #11a8de;
 }
 .color-box.success-1 {
-  background: #2FBD90;
+  background: #2fbd90;
 }
 .color-box.success-2 {
   background: #2aa980;
@@ -64,7 +64,7 @@
   background: #259471;
 }
 .color-box.warning-1 {
-  background: #FFCE07;
+  background: #ffce07;
 }
 .color-box.warning-2 {
   background: #edbe00;
@@ -73,7 +73,7 @@
   background: #d3a900;
 }
 .color-box.danger-1 {
-  background: #EF4344;
+  background: #ef4344;
 }
 .color-box.danger-2 {
   background: #ed2c2d;
@@ -82,19 +82,19 @@
   background: #eb1415;
 }
 .color-box.grey-1 {
-  background: #F5F5F5;
+  background: #f5f5f5;
   color: #757575;
 }
 .color-box.grey-2 {
-  background: #D6D6D6;
+  background: #d6d6d6;
   color: #757575;
 }
 .color-box.grey-3 {
-  background: #C2C2C2;
+  background: #c2c2c2;
   color: #757575;
 }
 .color-box.grey-4 {
-  background: #A3A3A3;
+  background: #a3a3a3;
 }
 .color-box.grey-5 {
   background: #757575;
@@ -106,7 +106,7 @@
 pre {
   overflow-x: auto;
   padding: 1.25em 1.25em 1.25em 2em;
-  border: 1px solid #D6D6D6;
+  border: 1px solid #d6d6d6;
   margin: 1.6em 0;
   font-size: 0.875em;
   white-space: pre;
@@ -121,7 +121,7 @@ pre:before {
   display: block;
   position: absolute;
   content: "Code";
-  background: #D6D6D6;
+  background: #d6d6d6;
   padding: 2px 8px;
   font-size: 11px;
   left: -11px;
@@ -131,7 +131,7 @@ pre:before {
 }
 
 code {
-  color: #2791D9;
+  color: #2791d9;
 }
 
 .box-row,
@@ -144,12 +144,12 @@ code {
   box-sizing: border-box;
   min-height: 1rem;
   margin-bottom: 0;
-  background: #2791D9;
+  background: #2791d9;
   border-radius: 2px;
   overflow: hidden;
   text-align: center;
   color: white;
-  background: #2791D9;
+  background: #2791d9;
   color: white;
   padding: 16px;
 }
@@ -160,12 +160,12 @@ code {
 
 .box-first {
   background: #2283c4;
-  border-color: #2791D9;
+  border-color: #2791d9;
 }
 
 .box-nested {
   background: #1f74ae;
-  border-color: #2791D9;
+  border-color: #2791d9;
 }
 
 .box-large {
@@ -271,7 +271,7 @@ code {
 }
 
 .fill {
-  background: #F5F5F5;
+  background: #f5f5f5;
   padding: 16px;
   border-radius: 4px;
 }
@@ -285,7 +285,7 @@ code {
 }
 .hierarchy dd:before {
   content: "|_";
-  color: #C2C2C2;
+  color: #c2c2c2;
   letter-spacing: -1px;
   margin-right: 4px;
   display: inline-block;
