--- a/urbanstory/src/css/sass/components/_list.scss
+++ b/urbanstory/src/css/sass/components/_list.scss
@@ -1,65 +1,68 @@
+/* List */
+
 .sub-title {
-    color: $c-grey-5;
+  color: $c-grey-5;
 }
 
 .sub-section:not(:last-of-type) {
-    margin-bottom: $gutter-xxl;
+  margin-bottom: $gutter-xxl;
 }
 
 .list {
-    cursor: pointer;
-    color: $c-grey-5;
-    list-style-type: none;
-    padding-inline-start: 0;
-    margin-block-start: 0;
-    margin-block-end: 0;
-    width: 280px;
+  cursor: pointer;
+  color: $c-grey-5;
+  list-style-type: none;
+  padding-inline-start: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  width: 280px;
+  max-width: 280px;
 
+  .list-item {
+    @include flexbox;
+    @include flex-middle;
+    @extend .transition;
+    height: $c-height;
+    font-size: 12px;
+    padding: 0 1rem;
+
+    &:hover {
+      background-color: $list-bg-color;
+      @include radius;
+      @extend .transition;
+    }
+  }
+
+  .active {
+    @include radius;
+    border: 1px solid $list-bg-color;
+    background-color: $list-bg-color;
+
+    .check-box-icon:after {
+      background-image: url(../../src/img/list/check.svg);
+      background-size: $icon-size $icon-size;
+      width: $icon-size;
+      height: $icon-size;
+      content: "";
+    }
+  }
+
+  &.check-box {
     .list-item {
-        align-items: center;
-        display: flex;
-        height: 40px;
-        transition: 0.5s;
-        font-size: 12px;
-        padding: 0 1rem;
+      padding: 0 0;
 
-        &:hover {
-            background-color: rgba(39, 145, 217, 0.1);
-            border-radius: 4px;
-            transition: 0.5s;
-        }
+      .check-box-icon {
+        @include flexbox;
+        @include flex-middle;
+        justify-content: center;
+        width: $c-height;
+        height: $c-height;
+      }
+
+      p {
+        font-size: 14px;
+        color: $c-grey-5;
+      }
     }
-
-    .active {
-        border: 1px solid rgba(39, 145, 217, 0.1);
-        border-radius: 4px;
-        background-color: rgba(39, 145, 217, 0.1);
-
-        .check-box-icon {
-            .icon {
-                width: 14px;
-                height: 14px;
-                content: url(../../src/img/list/check.svg);
-            }
-        }
-    }
-}
-
-.check-box {
-    .list-item {
-        padding: 0 0;
-
-        .check-box-icon {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 40px;
-            height: 40px;
-        }
-
-        p {
-            font-size: 14px;
-            color: $c-grey-5;
-        }
-    }
+  }
 }
