--- a/urbanstory/src/css/style.css
+++ b/urbanstory/src/css/style.css
@@ -2109,9 +2109,9 @@ select {
   -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  -webkit-border-radius: 2;
-  -moz-border-radius: 2;
-  border-radius: 2;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
 }
 .pagination a {
   display: inline-block;
