--- a/urbanstory/src/css/sass/components/_global.scss
+++ b/urbanstory/src/css/sass/components/_global.scss
@@ -24,12 +24,12 @@ body{
 }
 
 ::selection {
-  background: $c-median-1;
+  background: $c-firm-1;
   /* Safari */
   color: #fff; }
 
 ::-moz-selection {
-  background: $c-median-1;
+  background: $c-firm-1;
   /* Firefox */
   color: #fff; }
 
