--- a/urbanstory/src/css/sass/components/_variables.scss
+++ b/urbanstory/src/css/sass/components/_variables.scss
@@ -1,53 +1,61 @@
 // Color variables
 
-$c-firm-1:#011148;
-$c-firm-2:darken($c-firm-1, 5); // #010b2f
-$c-firm-3:darken($c-firm-1, 10); // #000516
+$c-firm-1: #011148;
+$c-firm-2: darken($c-firm-1, 5); // #010b2f
+$c-firm-3: darken($c-firm-1, 10); // #000516
 
-$c-median-1:#2791D9;
-$c-median-2:darken($c-median-1, 5); //#2283c4
-$c-median-3:darken($c-median-1, 10); //#1f74ae
+$c-median-1: #2791d9;
+$c-median-2: darken($c-median-1, 5); //#2283c4
+$c-median-3: darken($c-median-1, 10); //#1f74ae
 
-$c-prime-1:#33BEEF;
-$c-prime-2:darken($c-prime-1, 5); // #1bb6ed
-$c-prime-3:darken($c-prime-1, 10); // #11a8de
+$c-prime-1: #33beef;
+$c-prime-2: darken($c-prime-1, 5); // #1bb6ed
+$c-prime-3: darken($c-prime-1, 10); // #11a8de
 
-$c-red-1:#EF4344;
-$c-red-2:darken($c-red-1, 5); //#ed2c2d
-$c-red-3:darken($c-red-1, 10); //#eb1415
+$c-red-1: #ef4344;
+$c-red-2: darken($c-red-1, 5); //#ed2c2d
+$c-red-3: darken($c-red-1, 10); //#eb1415
 
-$c-yellow-1:#FFCE07;
-$c-yellow-2:darken($c-yellow-1, 5); //#edbe00
-$c-yellow-3:darken($c-yellow-1, 10); //#d3a900
+$c-yellow-1: #ffce07;
+$c-yellow-2: darken($c-yellow-1, 5); //#edbe00
+$c-yellow-3: darken($c-yellow-1, 10); //#d3a900
 
-$c-green-1:#2FBD90;
-$c-green-2:darken($c-green-1, 5); //#2aa980
-$c-green-3:darken($c-green-1, 10); //#259471
+$c-green-1: #2fbd90;
+$c-green-2: darken($c-green-1, 5); //#2aa980
+$c-green-3: darken($c-green-1, 10); //#259471
 
+$c-red-alert: #fcd9da;
+$c-yellow-alert: #fff5cd;
+$c-green-alert: #d5f2e9;
+$c-info-alert: #d4e9f7;
 
-$c-red-alert:#FCD9DA;
-$c-yellow-alert:#FFF5CD;
-$c-green-alert:#D5F2E9;
-$c-info-alert:#D4E9F7;
+$c-grey-1: #f5f5f5;
+$c-grey-2: #d6d6d6;
+$c-grey-3: #c2c2c2;
+$c-grey-4: #a3a3a3;
+$c-grey-5: #757575;
+$c-grey-6: #212121;
 
-$c-grey-1:#F5F5F5;
-$c-grey-2:#D6D6D6;
-$c-grey-3:#C2C2C2;
-$c-grey-4:#A3A3A3;
-$c-grey-5:#757575;
-$c-grey-6:#212121;
+$c-border: $c-grey-2;
 
-$c-border:$c-grey-2;
+$c-white: rgb(255, 255, 255);
+$c-bg-color: rgba(white, 0.8);
+$card-box-shadow: 0 0 0 1px rgba(black, 0.05), 0 2px 5px 0 rgba(black, 0.05);
 
-$c-white:rgb(255, 255, 255);
-$c-bg-color : rgba(white,0.8);
-$card-box-shadow : 0 0 0 1px rgba(black, .05), 0 2px 5px 0 rgba(black, .05);
+$gutter-xxl: 64px;
+$gutter-xl: 32px;
+$gutter-l: 16px;
+$gutter-m: 8px;
+$gutter-s: 4px;
 
-$gutter-xxl:64px;
-$gutter-xl:32px;
-$gutter-l:16px;
-$gutter-m:8px;
-$gutter-s:4px;
+$font-stack: "Barlow", Arial, sans-serif;
+$font-icon: urbanfont;
 
-$font-stack:'Barlow', Arial, sans-serif;
-$font-icon:urbanfont;
+$icon-size: 14px;
+
+$br-height: 18px; // breadcrumb height
+$c-height: 40px;
+$label-height: 20px;
+
+$list-bg-color: rgba(39, 145, 217, 0.1);
+$pg-box-shadow-color: rgba(0, 0, 0, 0.1);
