--- a/urbanstory/src/css/sass/composer/style.scss
+++ b/urbanstory/src/css/sass/composer/style.scss
@@ -14,3 +14,7 @@
 @import "../components/toast";
 @import "../components/tab";
 @import "../components/_checkbox-radio";
+@import "../components/labels";
+@import "../components/list";
+@import "../components/breadcrumbs";
+@import "../components/pagination";
