Fixed styling for all pages

--- a/urbanstory/pages/components/button.html
+++ b/urbanstory/pages/components/button.html
@@ -176,7 +176,15 @@
 &lt;a href=&quot;#&quot; class=&quot;link-secondary&quot;&gt;Link Secondary&lt;/a&gt;</code></pre>
 		<h6>Sample Paragraph</h6>
 		<article>
-			<p>Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and engage in conversation with more and more people throughout their lives.  And while most people will spend their time constantly speaking, some never really learn to listen, which is the king of effective <a href="#" class="link-primary">communication</a>. It may seem strange to hear such a thing as this, but it’s true. Even though it may not sound true to the individual who just spent the last couple moments listening to some co-worker blather on about his <a href="#" class="link-secondary">fantasy football</a> picks, but it is.  Without proper listening, speech communication would just be a lot of annoying sounds. Unfortunately, most of the time we spend listening, really is just the process of physically absorbing the annoying squawks and squeaks that come out of someone.  </p>
+			<p>Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and
+				engage in conversation with more and more people throughout their lives. And while most people will
+				spend their time constantly speaking, some never really learn to listen, which is the king of effective
+				<a href="#" class="link-primary">communication</a>. It may seem strange to hear such a thing as this,
+				but it’s true. Even though it may not sound true to the individual who just spent the last couple
+				moments listening to some co-worker blather on about his <a href="#" class="link-secondary">fantasy
+					football</a> picks, but it is. Without proper listening, speech communication would just be a lot of
+				annoying sounds. Unfortunately, most of the time we spend listening, really is just the process of
+				physically absorbing the annoying squawks and squeaks that come out of someone. </p>
 		</article>
 	</section>
 </div>
