--- a/urbanstory/pages/components/alert.html
+++ b/urbanstory/pages/components/alert.html
@@ -6,7 +6,10 @@
 		<h4>Alert <small>(Default)</small></h4>
 		<div class="alert">
 			<h4>Alert <small>(Default)</small></h4>
-			Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and engage in conversation with more and more people throughout their lives. And while most people will spend their time constantly speaking, some never really learn to listen, which is the king of effective communication.
+			Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and
+			engage in conversation with more and more people throughout their lives. And while most people will spend
+			their time constantly speaking, some never really learn to listen, which is the king of effective
+			communication.
 			<button class="btn btn-flat btn-small alert-close"><i class="icon-close"></i></button>
 		</div>
 		<pre><code>&lt;div class=&quot;alert&quot;&gt;
@@ -18,7 +21,10 @@
 		<h4>Alert <code>.is-danger</code></h4>
 		<div class="alert is-danger">
 			<h4>Alert Danger</h4>
-			Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and engage in conversation with more and more people throughout their lives. And while most people will spend their time constantly speaking, some never really learn to listen, which is the king of effective communication.
+			Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and
+			engage in conversation with more and more people throughout their lives. And while most people will spend
+			their time constantly speaking, some never really learn to listen, which is the king of effective
+			communication.
 			<button class="btn btn-flat btn-small alert-close"><i class="icon-close"></i></button>
 		</div>
 		<pre><code>&lt;div class=&quot;alert is-danger&quot;&gt;
@@ -30,7 +36,10 @@
 		<h4>Alert <code>.is-success</code></h4>
 		<div class="alert is-success">
 			<h4>Alert Success</h4>
-			Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and engage in conversation with more and more people throughout their lives. And while most people will spend their time constantly speaking, some never really learn to listen, which is the king of effective communication.
+			Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and
+			engage in conversation with more and more people throughout their lives. And while most people will spend
+			their time constantly speaking, some never really learn to listen, which is the king of effective
+			communication.
 			<button class="btn btn-flat btn-small alert-close"><i class="icon-close"></i></button>
 		</div>
 		<pre><code>&lt;div class=&quot;alert is-success&quot;&gt;
@@ -42,7 +51,10 @@
 		<h4>Alert <code>.is-info</code></h4>
 		<div class="alert is-info">
 			<h4>Alert Info</h4>
-			Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and engage in conversation with more and more people throughout their lives. And while most people will spend their time constantly speaking, some never really learn to listen, which is the king of effective communication.
+			Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and
+			engage in conversation with more and more people throughout their lives. And while most people will spend
+			their time constantly speaking, some never really learn to listen, which is the king of effective
+			communication.
 			<button class="btn btn-flat btn-small alert-close"><i class="icon-close"></i></button>
 		</div>
 		<pre><code>&lt;div class=&quot;alert is-info&quot;&gt;
@@ -52,9 +64,13 @@
 &lt;/div&gt;</code></pre>
 
 		<div class="alert has-img is-danger">
-			<img src="https://www.rhinocarhire.com/CorporateSite/media/Drive-Smart/Dash-Symbols/warning_symbol_in_red.png">
+			<img
+				src="https://www.rhinocarhire.com/CorporateSite/media/Drive-Smart/Dash-Symbols/warning_symbol_in_red.png">
 			<h3>Warning</h3>
-			Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and engage in conversation with more and more people throughout their lives. And while most people will spend their time constantly speaking, some never really learn to listen, which is the king of effective communication.
+			Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and
+			engage in conversation with more and more people throughout their lives. And while most people will spend
+			their time constantly speaking, some never really learn to listen, which is the king of effective
+			communication.
 			<button class="btn btn-flat btn-small alert-close"><i class="icon-close"></i></button>
 		</div>
 		<pre><code>&lt;div class=&quot;alert has-img is-danger&quot;&gt;
