--- a/urbanstory/src/css/sass/composer/index.scss
+++ b/urbanstory/src/css/sass/composer/index.scss
@@ -3,110 +3,110 @@
 @import "../components/variables";
 @import "../components/mixin";
 
-.page-hero{
-  padding:2em 0;
-  & + section{
-    margin:$gutter-xl 0 $gutter-xxl 0;
+.page-hero {
+  padding: 2em 0;
+  & + section {
+    margin: $gutter-xl 0 $gutter-xxl 0;
   }
 }
-.border-bottom{
-  border-bottom:solid 1px $c-border;
+.border-bottom {
+  border-bottom: solid 1px $c-border;
 }
-.text-giant{
-  font-size:6rem;
-  line-height:6rem;
+.text-giant {
+  font-size: 6rem;
+  line-height: 6rem;
   //outline: solid 1px red;
-  margin:$gutter-xl 0;
+  margin: $gutter-xl 0;
 }
-.card-base{
-  min-height:25vh;
+.card-base {
+  min-height: 25vh;
 }
-.color-box{
-  width:100%;
-  height:48px;
-  color:white;
-  line-height:48px;
-  padding:0 $gutter-l;
-  &.firm-1{
-    background:$c-firm-1;
+.color-box {
+  width: 100%;
+  height: 48px;
+  color: white;
+  line-height: 48px;
+  padding: 0 $gutter-l;
+  &.firm-1 {
+    background: $c-firm-1;
   }
-  &.firm-2{
-    background:$c-firm-2;
+  &.firm-2 {
+    background: $c-firm-2;
   }
-  &.firm-3{
-    background:$c-firm-3;
+  &.firm-3 {
+    background: $c-firm-3;
   }
-  &.median-1{
-    background:$c-median-1;
+  &.median-1 {
+    background: $c-median-1;
   }
-  &.median-2{
-    background:$c-median-2;
+  &.median-2 {
+    background: $c-median-2;
   }
-  &.median-3{
-    background:$c-median-3;
+  &.median-3 {
+    background: $c-median-3;
   }
-  &.prime-1{
-    background:$c-prime-1;
+  &.prime-1 {
+    background: $c-prime-1;
   }
-  &.prime-2{
-    background:$c-prime-2;
+  &.prime-2 {
+    background: $c-prime-2;
   }
-  &.prime-3{
-    background:$c-prime-3;
+  &.prime-3 {
+    background: $c-prime-3;
   }
-  &.success-1{
-    background:$c-green-1;
+  &.success-1 {
+    background: $c-green-1;
   }
-  &.success-2{
-    background:$c-green-2;
+  &.success-2 {
+    background: $c-green-2;
   }
-  &.success-3{
-    background:$c-green-3;
+  &.success-3 {
+    background: $c-green-3;
   }
-  &.warning-1{
-    background:$c-yellow-1;
+  &.warning-1 {
+    background: $c-yellow-1;
   }
-  &.warning-2{
-    background:$c-yellow-2;
+  &.warning-2 {
+    background: $c-yellow-2;
   }
-  &.warning-3{
-    background:$c-yellow-3;
+  &.warning-3 {
+    background: $c-yellow-3;
   }
-  &.danger-1{
-    background:$c-red-1;
+  &.danger-1 {
+    background: $c-red-1;
   }
-  &.danger-2{
-    background:$c-red-2;
+  &.danger-2 {
+    background: $c-red-2;
   }
-  &.danger-3{
-    background:$c-red-3;
+  &.danger-3 {
+    background: $c-red-3;
   }
-  &.grey-1{
-    background:$c-grey-1;
-    color:$c-grey-5;
+  &.grey-1 {
+    background: $c-grey-1;
+    color: $c-grey-5;
   }
-  &.grey-2{
-    background:$c-grey-2;
-    color:$c-grey-5;
+  &.grey-2 {
+    background: $c-grey-2;
+    color: $c-grey-5;
   }
-  &.grey-3{
-    background:$c-grey-3;
-    color:$c-grey-5;
+  &.grey-3 {
+    background: $c-grey-3;
+    color: $c-grey-5;
   }
-  &.grey-4{
-    background:$c-grey-4;
+  &.grey-4 {
+    background: $c-grey-4;
   }
-  &.grey-5{
-    background:$c-grey-5;
+  &.grey-5 {
+    background: $c-grey-5;
   }
-  &.grey-6{
-    background:$c-grey-6;
+  &.grey-6 {
+    background: $c-grey-6;
   }
 }
 
 pre {
   overflow-x: auto;
-  padding:1.25em 1.25em 1.25em 2em;
+  padding: 1.25em 1.25em 1.25em 2em;
   border: 1px solid $c-grey-2;
   //border-left-width: 5px;
   margin: 1.6em 0;
@@ -114,25 +114,25 @@ pre {
   //background: $c-grey-1;
   white-space: pre;
   word-wrap: normal;
-  line-height:1.25em;
-  position:relative;
+  line-height: 1.25em;
+  position: relative;
   @include radius;
-  &:before{
+  &:before {
     display: block;
-    position:absolute;
-    content:'Code';
+    position: absolute;
+    content: "Code";
     //top:0;
-    background:$c-grey-2;
-    padding:2px 8px;
+    background: $c-grey-2;
+    padding: 2px 8px;
     font-size: 11px;
-    left:-11px;
-    top:10px;
+    left: -11px;
+    top: 10px;
     color: $c-grey-5;
     transform: rotate(-90deg);
   }
 }
 code {
-  color:$c-median-1;
+  color: $c-median-1;
 }
 .box-row,
 .box-first,
@@ -149,9 +149,9 @@ code {
   overflow: hidden;
   text-align: center;
   color: white;
-  background:$c-median-1;
-  color:white;
-  padding:$gutter-l;
+  background: $c-median-1;
+  color: white;
+  padding: $gutter-l;
 }
 .box-row {
   margin-bottom: 1rem;
@@ -224,92 +224,92 @@ code {
     visibility: visible;
   }
 }
-.characters{
+.characters {
   letter-spacing: 1rem;
   font-size: 1.5rem;
   line-height: 1.5em;
 }
-.font-italic{
+.font-italic {
   font-style: italic;
 }
-.font-semibold{
+.font-semibold {
   font-weight: 600;
 }
-.font-semibold-italic{
+.font-semibold-italic {
   font-weight: 600;
   font-style: italic;
 }
-.font-bold{
+.font-bold {
   font-weight: 700;
 }
-.font-bold-italic{
+.font-bold-italic {
   font-weight: 700;
   font-style: italic;
 }
-.fill{
+.fill {
   background: $c-grey-1;
-  padding:$gutter-l;
-  border-radius:4px;
+  padding: $gutter-l;
+  border-radius: 4px;
 }
 
-.hierarchy{
+.hierarchy {
   font-size: 0.925rem;
-  dt{
-    color:$c-firm-1;
+  dt {
+    color: $c-firm-1;
     font-weight: 700;
   }
-  dd{
-    &:before{
-      content: '|_';
+  dd {
+    &:before {
+      content: "|_";
       color: $c-grey-3;
       letter-spacing: -1px;
       margin-right: 4px;
       display: inline-block;
       transform: translateY(-6px);
     }
-    &.hie-parent{
+    &.hie-parent {
       color: $c-firm-1;
-      
-      &:before{
-        content: '--';
+
+      &:before {
+        content: "--";
         transform: translateY(0px);
       }
-      & ~ dd{
+      & ~ dd {
         // outline: solid 1px red;
         padding-left: 16px;
-        &.hie-parent{
-          padding-left:0;
+        &.hie-parent {
+          padding-left: 0;
         }
       }
     }
   }
 }
 
-.o-list{
-  margin-bottom:$gutter-l;
+.o-list {
+  margin-bottom: $gutter-l;
   // outline: solid 1px red;
-  font-size:0.925rem;
+  font-size: 0.925rem;
   color: $c-grey-6;
-  ol{
-    margin-bottom:$gutter-l;
-    margin-top:$gutter-m;
+  ol {
+    margin-bottom: $gutter-l;
+    margin-top: $gutter-m;
   }
 }
 
 /*evelyn's visual language css!*/
 /*--------starthere--------*/
 
-.page-symbol{
+.page-symbol {
   // border: 1px solid red;
 }
 
-.page-illustrations{
+.page-illustrations {
   // border: 1px solid red;
   overflow: auto;
   clear: left;
 }
 
-.lists{
+.lists {
   // border: 1px solid red;
   position: relative;
   float: left;
@@ -317,7 +317,7 @@ code {
   margin: 0px 0px 0px 10px;
 }
 
-.cards-1{
+.cards-1 {
   // border: 1px solid red;
   position: relative;
   float: left;
@@ -327,7 +327,7 @@ code {
   text-align: center;
 }
 
-.cards-2{
+.cards-2 {
   // border: 1px solid red;
   position: relative;
   float: left;
@@ -336,7 +336,7 @@ code {
   padding: 10px 10px 10px 10px;
 }
 
-.gambar{
+.gambar {
   // border: 1px solid red;
   float: left;
   margin-right: 10px;
@@ -344,4 +344,3 @@ code {
 
 /*evelyn's visual language css!*/
 /*---------ends here--------*/
-
